[gd_scene load_steps=5 format=3 uid="uid://buvwmmfxypdpj"]

[ext_resource type="Script" path="res://tscn/ball.gd" id="1_jqm1c"]
[ext_resource type="Texture2D" uid="uid://0kkv05avdthx" path="res://art/ball.png" id="2_4e8hd"]
[ext_resource type="AudioStream" uid="uid://dddeubl8ki7vr" path="res://art/hitHurt.wav" id="3_8e7sh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqiwg"]

[node name="ball" type="Area2D"]
script = ExtResource("1_jqm1c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_4e8hd")

[node name="hit_play" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8e7sh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_vqiwg")

[node name="change_color_timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="change_color_timer" to="." method="_on_change_color_timer_timeout"]
